@@ -57,6 +57,8 @@ admin.caption.smtp.host=Serveur
 admin.caption.smtp.pass=Mot de passe
 admin.caption.smtp.user=Nom d'utilisateur
 admin.caption.tableofcontents=Utiliser la table de commentaires
+admin.caption.tableofcontentsdepth=Maximum table of contents depth
+admin.caption.tableofcontentsdepthhelp=Set this value from 1-6 to determine how much nesting is allowed within a topic's table of contents.
 admin.caption.uploaddir=Dossier fichiers t\u00E9l\u00E9charg\u00E9s
 admin.caption.uploaddirhelp=Dossier o\u00F9 sont stock\u00E9s les fichiers t\u00E9l\u00E9charg\u00E9s, et depuis lequel les fichiers sont r\u00E9cup\u00E9r\u00E9s.
 admin.caption.uploaddirrel=Chemin relatif \u00E0 la racine du serveur web pour le dossier fichiers t\u00E9l\u00E9charg\u00E9s
