@@ -57,6 +57,8 @@ admin.caption.smtp.host=Host
 admin.caption.smtp.pass=Jelsz\u00F3
 admin.caption.smtp.user=Felhaszn\u00E1l\u00F3n\u00E9v
 admin.caption.tableofcontents=Tartalomjegyz\u00E9k haszn\u00E1lata
+admin.caption.tableofcontentsdepth=Maximum table of contents depth
+admin.caption.tableofcontentsdepthhelp=Set this value from 1-6 to determine how much nesting is allowed within a topic's table of contents.
 admin.caption.uploaddir=F\u00E1jl felt\u00F6lt\u00E9s k\u00F6nyvt\u00E1r (a webszerver sz\u00E1m\u00E1ra el\u00E9rhet\u0151v\u00E9 kell tenni)
 admin.caption.uploaddirhelp=A felt\u00F6lt\u00F6tt f\u00E1jlok t\u00E1rol\u00E1s\u00E1ra kijel\u00F6lt k\u00F6nyvt\u00E1r. A f\u00E1jlokat is innen t\u00F6ltik le.
 admin.caption.uploaddirrel=A f\u00E1jl felt\u00F6lt\u00E9s k\u00F6nyvt\u00E1r\u00E1nak relat\u00EDv \u00FAtvonala a web szerver gy\u00F6k\u00E9rk\u00F6nyvt\u00E1r\u00E1hoz viszony\u00EDtva
