@@ -13,6 +13,7 @@
 * FEATURE: Be more efficient with caching to improve performance.
 * FEATURE: Add a checkbox to Special:Manage to delete/undelete an associated
   comments page.
+* FEATURE: Provide an option to set maximum table of contents depth.
 * FEATURE: After editing a section, page will now reload to that section.
 * FEATURE: Remove option to disable topic versioning.
 * FEATURE: Updated Polish translations from Robert Matyja (dlpa).
